--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.2",
     "helmet": "^4.6.0",
+    "image-url-validator": "^1.0.4",
     "mongoose": "^5.13.0",
     "nodemon": "^2.0.9",
     "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "valid-url": "^1.0.9"
   }
 }
