--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "booking items in chemical lab",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel src -d lib"
   },
   "author": "nagasai",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "connect-mongo": "^4.4.1",
     "connect-mongodb-session": "^2.4.1",
     "dotenv": "^10.0.0",
@@ -18,10 +19,18 @@
     "express-session": "^1.17.2",
     "helmet": "^4.6.0",
     "image-url-validator": "^1.0.4",
+    "jquery": "^3.6.0",
+    "jquery-timepicker": "^1.3.3",
+    "jquery-ui": "^1.12.1",
     "mongoose": "^5.13.0",
     "nodemon": "^2.0.9",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
+    "path": "^0.12.7",
+    "toastr": "^2.1.4",
     "valid-url": "^1.0.9"
+  },
+  "devDependencies": {
+    "laravel-mix": "^6.0.25"
   }
 }
