--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "description": "booking items in chemical lab",
   "main": "server.js",
-  "scripts": {
-  },
-  "engines":{
-    "node":"14.17.3",
-    "npm":"7.19.1"
+  "scripts": {},
+  "engines": {
+    "node": "14.17.3",
+    "npm": "7.19.1"
   },
   "author": "nagasai",
   "license": "ISC",
@@ -23,10 +22,9 @@
     "helmet": "^4.6.0",
     "image-url-validator": "^1.0.4",
     "jquery": "^3.6.0",
-    "jquery-timepicker": "^1.3.3",
     "jquery-ui": "^1.12.1",
     "mongoose": "^5.13.0",
-    "nodemon": "^2.0.9",
+    "nodemon": "^2.0.12",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
