prevent-keyboard-popup-for-date and time picker

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "image-url-validator": "^1.0.4",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.12.1",
+    "luxon": "^1.28.0",
+    "moment": "^2.29.1",
     "mongoose": "^5.13.0",
     "nodemon": "^2.0.12",
     "passport": "^0.4.1",
