--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
+    "stream-browserify": "^2.0.2",
+    "sweetalert2": "^11.0.18",
     "toastr": "^2.1.4",
     "valid-url": "^1.0.9"
   },
