--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,5 +1,4 @@
 {
     "/public/js/admin.js": "/public/js/admin.js",
-    "/public/js/home.js": "/public/js/home.js",
-    "/public/js/admin-1.js": "/public/js/admin-1.js"
+    "/public/js/home.js": "/public/js/home.js"
 }
