--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemon": "^2.0.12",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
+    "passport-outlook": "^3.0.0",
     "path": "^0.12.7",
     "stream-browserify": "^2.0.2",
     "sweetalert2": "^11.0.18",
